add swagger doc for get employees
