# docs/swagger.json
@@ -19,6 +19,39 @@
     "basePath": "/",
     "paths": {
         "/api/employee/": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get employees from the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "EmployeeApi"
+                ],
+                "summary": "get-employees",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Employee"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request!!",
+                        "schema": {}
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -155,7 +188,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get employee from the database",
+                "description": "Delete employee from the database",
                 "consumes": [
                     "application/json"
                 ],
